src/index.css
body {
    margin:0;
    padding:0;
    font-family: 'Trebuchet MS', sans-serif;
    background-color: #7EE8FA;
}

.navbar {
    background-color: #32CD32;
    padding: 2rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.nav-links {
    list-style: none;
    margin: 0;
    padding: 0;
    display: flex;
    gap: 2rem;
}
.nav-links a {
    color: white;
    text-decoration: none;
    font-weight: bold;
    font-size: x-large;
}
.nav-links a:hover {
    font-size: xx-large;
    color: #FFF07C;
}

.header{
    text-align: center;
    color: #FFF07C;
    font-size: 3em;
    text-transform: uppercase;
    margin-top: -3%;
}
.motto {
    margin-top: -3%;
}
.intro-premise {
    text-align: center;
}
.rules {
    color: red;  
    text-align: center;
    margin-top: auto;
}

h1 {
    text-align: center;
    color: #FFF07C;
    margin-top: 4%;
    /* margin-bottom: -2%; */
}

h2 {
    text-align: center;
    font-size: xx-large;
    margin-top: auto;
    margin-bottom: auto;
}

.game-h2 {
    text-align: center;
    color: #FFF07C;
    font-size: 3em;
    margin-top: 2%;
}

#account-user-details {
    display: flex;
    flex-wrap: wrap;
    font-size: x-large;
    border: solid black 5px;
    width: 30%;
    /* padding: 10px; */
    /* margin-top: 5%; */
    margin-left: 5%;
    background-color: white;
    /* color: #fff; */
    border-radius: 8px;
}
.account-played {
    background-color: #FFF07C;
    border-bottom: solid 5px;
    width: 100%;
}
.account-played:hover {
    font-size: larger;
}
.account-won {
    background-color: #32CD32;
    border-bottom: solid 5px;
    width: 100%;
}
.account-won:hover {
    font-size: larger;
}
.account-lost {
    background-color: red;
    border-bottom: solid 5px;
    width: 100%;
}
.account-lost:hover {
    font-size: larger;
}   
.account-ratio {
    background-color: #7EE8FA;
    border-top: solid 5px;
    width: 100%;
}
.account-ratio:hover {
    font-size: larger;
}

h3 {
    text-align: center;
}


h4 {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: auto;
    color: red;
}

p {
    text-align: center;
}

.intro-demo {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 25em;
    width: 50%;
    border: solid 5px;
    border-radius: 20px;
    margin: auto;
}

.switch-link {
    background-color: red;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: auto;
    margin-top: 15px;
    border: solid black 5px;
    border-radius: 5px;
    height: 3em;
    width: 15%;
    color: white;
    font-family: 'Trebuchet MS', sans-serif; 
}
.switch-link:hover {
    font-size: larger;
}

.login-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    /* width: 50%; */
    margin: auto;
    margin-top: 1%;
}

.uud {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: row;
    border-radius: 5px;
    width: 100%;
    margin-top: 1%;
    /* border: solid 3px; */
    gap: 5px
}

input {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: row;
    border: solid 4px;
    border-radius: 5px;
}

.update-buttons {
    display: flex;
    align-items: center;
    flex-direction: column;
    gap: 5px
}

button {
    background-color: red;
    display: flex;
    align-items: center;
    justify-content: center;
    /* margin: auto; */
    /* margin-top: 15px; */
    border: solid black 5px;
    border-radius: 5px;
    height: 3em;
    width: 15%;
    color: white;
    font-family: 'Trebuchet MS', sans-serif; 
}

button:hover {
    font-size: larger;
}

.intro-button {
    background-color: red;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: auto;
    margin-top: 15px;
    margin-bottom: 20px;
    border: solid black 5px;
    border-radius: 5px;
    height: 3em;
    width: 15%;
    text-align: center;
    color: white;
    font-family: 'Trebuchet MS', sans-serif;
}
.intro-button:hover {
    font-size: larger;
}

.game-quote {
    background-color: red;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: auto;
    margin-top: 15px;
    margin-bottom: 20px;
    border: solid black 5px;
    border-radius: 5px;
    height: 3em;
    width: 15%;
    text-align: center;
    color: white;
    font-family: 'Trebuchet MS', sans-serif;
}

.game-quote:hover {
    font-size: larger;
    color: white;
}

.game-shortening {
    background-color: #FFF07C;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: auto;
    margin-top: 15px;
    margin-bottom: 20px;
    border: solid black 5px;
    border-radius: 5px;
    height: 3em;
    width: 15%;
    text-align: center;
    color: #32CD32;
    font-family: 'Trebuchet MS', sans-serif;
}

.game-shortening:hover {
    font-size: larger;
    color: #32CD32;
}

.game-p1 {
    background-color: red;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: auto;
    margin-top: 15px;
    margin-bottom: 20%;
    border: solid black 5px;
    border-radius: 5px;
    height: 3em;
    width: auto;
    text-align: center;
    color: white;
    font-family: 'Trebuchet MS', sans-serif;
}

.game-p1:hover {
    font-size: larger;
}

.footer {
    position: absolute;
    background-color: #32CD32; 
    color: white; 
    padding: 1rem;
    width: 100%;
    margin-top: 20%;
}
.container-foot {
    max-width: 1140px;
    margin: 0 auto;
}
.row {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}
.col-md-4 {
    text-align: center;
    flex: 0 0 33.333%;
    max-width: 33.333%;
    padding: 0.75rem;
}
.row-mt-3 {
    text-align: center;
}
.text-center {
    text-align: center;
}
.foot {
    list-style-type: none;
    padding-left: 0;
}
.foot li {
    margin-bottom: 0.5rem;
}
.foot a {
    color: white;
    text-decoration: none;
}
.foot a:hover {
    text-decoration: underline;
    font-size: larger;
    color: #FFF07C;
}

.footerlink {
    width: 40px;
    height: 40px;
}

